# otus_final

./: .gitmodules  CMakeLists.txt  main.cpp  recognizer.c  worker.cpp  worker.h
.github/workflows/: release.yml
lib/: CMakeLists.txt  listener.cpp  listener.h  recognizer.cpp
lib/include/: recognizer.h
